--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy
 pandas
 duckdb
+plotly
 prophet
 seaborn
 cmdstanpy
@@ -9,6 +10,7 @@ statsmodels
 scikit-learn
 notebook
 jupyterlab
+ipywidgets
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
 jupyter-lsp
